--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 #importFrom(MASS, mvrnorm)
-#export(mediation, summary.mediation, print.summary.mediation)
+#export(mediation, summary.mediation, plot.mediation, print.mediation, print.summary.mediation)
 
 #S3method(summary, mediation)
+#S3method(plot, mediation)
 #S3method(print, mediation)
 #S3method(print, summary.mediation)
