--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,14 @@
 Package: mediation
-Version: 1.0
-Date: 2008-11-01
+Version: 0.9
+Date: 2009-06-01
 Title: R Package for Causal Mediation Analysis
 Author: Luke Keele <keele.4@polisci.osu.edu>,
         Dustin Tingley <dtingley@princeton.edu>,
         Teppei Yamamoto <tyamamot@princeton.edu>,
-        Kosuke Imai <kimai@princeton.edu>.
+        Kosuke Imai <kimai@princeton.edu>
 Maintainer: Luke Keele <keele.4@polisci.osu.edu>
 Depends: R (>= 2.8)
-Description: mediation is a publicly available R package that allows
-both parametric and nonparametric causal mediation analysis.  It
-implements the methods and suggestions of in Imai, Keele, and Yamamoto
-(2008) ``Identification and Inference in Causal Mediation Analysis.''
-In addition to the estimation of the average causal mediation effects,
-the software also allows researchers to conduct sensitivity analyses
-in both parametric and nonparametric settings.
+Description: mediation is a publicly available R package that allows both parametric and nonparametric causal mediation analysis.  It implements the methods and suggestions in Imai, Keele, and Yamamoto (2008) and Imai, Keele, Tingley (2009).  In addition to the estimation of causal mediation effects, the software also allows researchers to conduct sensitivity analysis for certain parametric models.
 LazyLoad: yes
 LazyData: yes
 License: GPL (version 2 or later)
