fixing many errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,10 @@
-#importFrom(MASS, mvrnorm)
-#export(mediation, summary.mediation, plot.mediation, print.mediation, print.summary.mediation)
+importFrom(MASS, mvrnorm)
+export(mediate, medsens, summary.mediation, summary.medsens, plot.medsens)
 
-#S3method(summary, mediation)
-#S3method(plot, mediation)
-#S3method(print, mediation)
-#S3method(print, summary.mediation)
+S3method(summary, mediation)
+S3method(summary, medsens)
+S3method(plot, medsens)
+S3method(print, mediation)
+S3method(print, medsens)
+S3method(print, summary.mediation)
+S3method(print, summary.medsens)
