--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,10 @@
 importFrom(MASS, mvrnorm)
-export(mediate, medsens, summary.mediation, summary.medsens, plot.medsens)
+export(mediate, medsens, summary.mediate, summary.medsens, plot.medsens)
 
-S3method(summary, mediation)
+S3method(summary, mediate)
 S3method(summary, medsens)
 S3method(plot, medsens)
-S3method(print, mediation)
+S3method(print, mediate)
 S3method(print, medsens)
-S3method(print, summary.mediation)
+S3method(print, summary.mediate)
 S3method(print, summary.medsens)
