--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,9 @@ Author: Dustin Tingley <dtingley@princeton.edu>,
         Kosuke Imai <kimai@princeton.edu>
 Maintainer: Dustin Tingley <dtingley@princeton.edu>
 Depends: R (>= 2.7), MASS, Matrix
-Suggests: mgcv, quantreg, VGAM, sandwich
+Suggests: mgcv, quantreg, VGAM, sandwich, SuppDists
 Description: mediation is a publicly available R package that allows both parametric and nonparametric causal mediation analysis.  It implements the methods and suggestions in Imai, Keele, and Yamamoto (2010) and Imai, Keele, Tingley (2010).  In addition to the estimation of causal mediation effects, the software also allows researchers to conduct sensitivity analysis for certain parametric models.
 LazyLoad: yes
 LazyData: yes
 License: GPL (version 2 or later)
+Packaged: 2011-04-29 18:53:10 UTC; teppei
