--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: mediation
 Version: 3.0
 Date: 2011-04-29
 Title: R Package for Causal Mediation Analysis
-Author: Dustin Tingley <dtingley@princeton.edu>,
+Author: Dustin Tingley <dtingley@gov.harvard.edu>,
         Teppei Yamamoto <tyamamot@princeton.edu>,
         Luke Keele <keele.4@polisci.osu.edu>,
         Kosuke Imai <kimai@princeton.edu>
-Maintainer: Dustin Tingley <dtingley@princeton.edu>
+Maintainer: Dustin Tingley <dtingley@gov.harvard.edu>
 Depends: R (>= 2.7), MASS, Matrix
 Suggests: mgcv, quantreg, VGAM, sandwich, SuppDists
 Description: mediation is a publicly available R package that allows both parametric and nonparametric causal mediation analysis.  It implements the methods and suggestions in Imai, Keele, and Yamamoto (2010) and Imai, Keele, Tingley (2010).  In addition to the estimation of causal mediation effects, the software also allows researchers to conduct sensitivity analysis for certain parametric models.
