--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: mediation
-Version: 3.1
-Date: 2011-08-22
+Version: 3.1.1
+Date: 2011-09-18
 Title: R Package for Causal Mediation Analysis
 Author: Dustin Tingley <dtingley@gov.harvard.edu>,
-        Teppei Yamamoto <tyamamot@princeton.edu>,
+        Teppei Yamamoto <teppei@mit.edu>,
         Luke Keele <keele.4@polisci.osu.edu>,
         Kosuke Imai <kimai@princeton.edu>
 Maintainer: Dustin Tingley <dtingley@gov.harvard.edu>
@@ -13,4 +13,4 @@ Description: mediation is a publicly available R package that allows both parame
 LazyLoad: yes
 LazyData: yes
 License: GPL (version 2 or later)
-Packaged: 2011-08-22 18:53:10 UTC; teppei
+Packaged: 2011-09-18 22:53:10 UTC; teppei
