--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 importFrom(MASS, mvrnorm, gamma.shape)
-importFrom(Matrix, Diagonal, kronecker)
+importFrom(Matrix, Diagonal)
+importMethodsFrom(Matrix, kronecker)
 
 export(mediate, summary.mediate, plot.mediate,
        summary.mediate.order, plot.mediate.order,
