Luke Package updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,8 @@ importFrom(MASS, mvrnorm, gamma.shape)
 importFrom(Matrix, Diagonal)
 importMethodsFrom(Matrix, kronecker)
 
-export(mediate, summary.mediate, plot.mediate,
-       summary.mediate.order, plot.mediate.order,
+export(mediate, mediate.npdiscrete, summary.mediate, plot.mediate,
+       summary.mediate.order,summary.mediate.npdiscrete,plot.mediate.order,
        medsens, summary.medsens, plot.medsens,
        mediations, summary.mediations, plot.mediations,
        summary.mediations.order, plot.mediations.order)
@@ -13,6 +13,7 @@ S3method(summary, mediate.order)
 S3method(summary, medsens)
 S3method(summary, mediations)
 S3method(summary, mediations.order)
+S3method(summary, mediate.npdiscrete)
 S3method(plot, mediate)
 S3method(plot, mediate.order)
 S3method(plot, medsens)
@@ -20,6 +21,7 @@ S3method(plot, mediations)
 S3method(plot, mediations.order)
 S3method(print, summary.mediate)
 S3method(print, summary.mediate.order)
+S3method(print, summary.mediate.npdiscrete)
 S3method(print, summary.medsens)
 S3method(print, summary.mediations)
 S3method(print, summary.mediations.order)
