--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mediation
-Version: 3.1.3
-Date: 2011-09-19
+Version: 4.0
+Date: 2012-2-XX
 Title: R Package for Causal Mediation Analysis
 Author: Dustin Tingley <dtingley@gov.harvard.edu>,
         Teppei Yamamoto <teppei@mit.edu>,
@@ -13,4 +13,3 @@ Description: mediation is a publicly available R package that allows both parame
 LazyLoad: yes
 LazyData: yes
 License: GPL (version 2 or later)
-Packaged: 2011-09-19 16:53:10 UTC; teppei
