--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: mediation
-Version: 4.1.1
+Version: 4.1.2
 Date: 2012-8-23
 Title: R Package for Causal Mediation Analysis
 Author: Dustin Tingley <dtingley@gov.harvard.edu>,
         Teppei Yamamoto <teppei@mit.edu>,
         Luke Keele <ljk20@psu.edu>,
         Kosuke Imai <kimai@princeton.edu>
-Maintainer: Dustin Tingley <dtingley@gov.harvard.edu>
-Depends: R (>= 2.14), MASS, Matrix, lpSolve, methods
+Maintainer: Teppei Yamamoto <teppei@mit.edu>
+Depends: R (>= 2.15.1), MASS, Matrix, lpSolve, methods
 Suggests: mgcv, quantreg, VGAM, sandwich, SuppDists, arm, survival
 Description: mediation is a publicly available R package that allows both parametric and nonparametric causal mediation analysis.  It implements the methods and suggestions in Imai, Keele, and Yamamoto (2010) and Imai, Keele, Tingley (2010).  In addition to the estimation of causal mediation effects, the software also allows researchers to conduct sensitivity analysis for certain parametric models.
 LazyLoad: yes
