--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: mediation
-Version: 4.2
-Date: 2012-12-18
+Version: 4.2.1
+Date: 2013-2-27
 Title: R Package for Causal Mediation Analysis
-Author: Dustin Tingley <dtingley@gov.harvard.edu>,
+Author: Kentaro Hirose <hirose@princeton.edu>,
+	Dustin Tingley <dtingley@gov.harvard.edu>,
         Teppei Yamamoto <teppei@mit.edu>,
         Luke Keele <ljk20@psu.edu>,
         Kosuke Imai <kimai@princeton.edu>
