added documentations for test functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(mediate, summary.mediate, plot.mediate,
        summary.mediations.order, plot.mediations.order,
        multimed, summary.multimed, plot.multimed,
        mediate.sed, mediate.pd, mediate.ped, mediate.ced,
-       summary.mediate.design)
+       summary.mediate.design,
+       test.TMint.mediate,
+       test.modmed.mediate)
 
 S3method(summary, mediate)
 S3method(summary, mediate.order)
@@ -38,3 +40,6 @@ S3method(print, summary.mediations)
 S3method(print, summary.mediations.order)
 S3method(print, summary.multimed)
 S3method(print, summary.mediate.design)
+S3method(print, test.modmed.mediate)
+S3method(test.TMint, mediate)
+S3method(test.modmed, mediate)
