--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: mediation
-Version: 4.2.2
-Date: 2013-4-18
+Version: 4.2.3
+Date: 2013-8-xx
 Title: R Package for Causal Mediation Analysis
-Author: Kentaro Hirose <hirose@princeton.edu>,
-	Dustin Tingley <dtingley@gov.harvard.edu>,
+Author: Dustin Tingley <dtingley@gov.harvard.edu>,
         Teppei Yamamoto <teppei@mit.edu>,
         Luke Keele <ljk20@psu.edu>,
-        Kosuke Imai <kimai@princeton.edu>
+        Kosuke Imai <kimai@princeton.edu>,
+        Kentaro Hirose <hirose@princeton.edu>
 Maintainer: Teppei Yamamoto <teppei@mit.edu>
 Depends: R (>= 2.15.1), MASS, Matrix, lpSolve, methods, sandwich
 Suggests: mgcv, quantreg, VGAM, SuppDists, lme4, arm, survival
