--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mediation
-Version: 4.2.3
+Version: 4.2.4
 Date: 2013-8-25
 Title: R Package for Causal Mediation Analysis
 Author: Dustin Tingley <dtingley@gov.harvard.edu>,
@@ -9,7 +9,7 @@ Author: Dustin Tingley <dtingley@gov.harvard.edu>,
         Kosuke Imai <kimai@princeton.edu>
 Maintainer: Teppei Yamamoto <teppei@mit.edu>
 Depends: R (>= 2.15.1), MASS, Matrix, lpSolve, methods, sandwich
-Suggests: mgcv, quantreg, VGAM, SuppDists, lme4, arm, survival
+Suggests: mgcv, quantreg, VGAM, SuppDists, lme4 (>= 1.0), arm, survival
 Description: mediation is a publicly available R package that allows both parametric and nonparametric causal mediation analysis.  It implements the methods and suggestions in Imai, Keele, and Yamamoto (2010) and Imai, Keele, Tingley (2010).  In addition to the estimation of causal mediation effects, the software also allows researchers to conduct sensitivity analysis for certain parametric models.
 LazyLoad: yes
 LazyData: yes
