--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@ importFrom(MASS, mvrnorm, gamma.shape)
 importFrom(Matrix, Diagonal)
 importMethodsFrom(Matrix, kronecker)
 importFrom(lpSolve, lp)
+importFrom(sandwich, vcovHC)
+
 
 export(mediate, summary.mediate, plot.mediate,
        summary.mediate.order, plot.mediate.order,
