--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mediation
 Version: 4.4.2
 Date: 2014-8-27
-Title: R Package for Causal Mediation Analysis
+Title: Causal Mediation Analysis
 Author: Dustin Tingley <dtingley@gov.harvard.edu>,
         Teppei Yamamoto <teppei@mit.edu>,
         Kentaro Hirose <hirose@princeton.edu>,
@@ -10,7 +10,7 @@ Author: Dustin Tingley <dtingley@gov.harvard.edu>,
 Maintainer: Teppei Yamamoto <teppei@mit.edu>
 Depends: R (>= 2.15.1), MASS, Matrix, lpSolve, sandwich, mvtnorm
 Suggests: mgcv, quantreg, VGAM, SuppDists, lme4 (>= 1.0), survival, parallel
-Description: mediation is a publicly available R package that allows both parametric and nonparametric causal mediation analysis.  It implements the methods and suggestions in Imai, Keele and Yamamoto (2010), Imai, Keele and Tingley (2010), Imai, Tingley and Yamamoto (2013), Imai and Yamamoto (2013) and Yamamoto (2013). In addition to the estimation of causal mediation effects, the software also allows researchers to conduct sensitivity analysis for certain parametric models.
+Description: mediation allows both parametric and nonparametric causal mediation analysis.  It implements the methods and suggestions in Imai, Keele and Yamamoto (2010), Imai, Keele and Tingley (2010), Imai, Tingley and Yamamoto (2013), Imai and Yamamoto (2013) and Yamamoto (2013). In addition to the estimation of causal mediation effects, the software also allows researchers to conduct sensitivity analysis for certain parametric models.
 LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
