--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ importFrom(sandwich, vcovHC, sandwich, estfun)
 importFrom(mvtnorm, rmvnorm)
 importFrom(Hmisc, wtd.var)
 importFrom(lme4, VarCorr)
+importFrom("graphics", "abline", "axis", "contour", "lines", "par", "plot", "plot.default", "points", "polygon", "segments", "text", "title")
+importFrom("grDevices", "dev.interactive", "devAskNewPage")
+importFrom("stats", "approx", "as.formula", "coef", "dnorm", "family", "formula", "getCall", "glm", "integrate", "lm", "lowess", "model.frame", "model.matrix", "model.response", "model.weights", "na.omit", "pnorm", "predict", "printCoefmat", "qnorm", "quantile", "rgamma", "sd", "terms", "update", "var", "vcov", "weighted.mean")
+importFrom("utils", "packageDescription")
 
 export(mediate, summary.mediate, plot.mediate,
        summary.mediate.order, plot.mediate.order,
