--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Author: Dustin Tingley <dtingley@gov.harvard.edu>,
         Kosuke Imai <kimai@princeton.edu>
 Maintainer: Teppei Yamamoto <teppei@mit.edu>
 Depends: R (>= 2.15.1), MASS, Matrix, mvtnorm, sandwich
-Imports: lpSolve, Hmisc, lme4 (>= 1.0)
+Imports: lpSolve, Hmisc, lme4 (>= 1.0), stats, graphics, grDevices, utils
 Suggests: mgcv, quantreg, VGAM, SuppDists, survival, parallel
 Description: We implement parametric and non parametric mediation analysis. This package performs the methods and suggestions in Imai, Keele and Yamamoto (2010), Imai, Keele and Tingley (2010), Imai, Tingley and Yamamoto (2013), Imai and Yamamoto (2013) and Yamamoto (2013). In addition to the estimation of causal mediation effects, the software also allows researchers to conduct sensitivity analysis for certain parametric models.
 LazyLoad: yes
