Update travis.yml to fix survival build error

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: r
 cache: packages
 
+# Install survival directly, to get the latest version and avoid
+# a build error from using an older version.
+r_packages: survival
+
 notifications:
   email:
     on_success: change
