Added Two-state least squares implementation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(mediate.ced)
 export(mediate.pd)
 export(mediate.ped)
 export(mediate.sed)
+export(mediate_tsls)
 export(mediations)
 export(medsens)
 export(multimed)
@@ -54,6 +55,8 @@ importFrom(MASS,gamma.shape)
 importFrom(MASS,mvrnorm)
 importFrom(MASS,polr)
 importFrom(Matrix,Diagonal)
+importFrom(grDevices,dev.interactive)
+importFrom(grDevices,devAskNewPage)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,contour)
@@ -77,6 +80,7 @@ importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,delete.response)
+importFrom(stats,deriv)
 importFrom(stats,dnorm)
 importFrom(stats,family)
 importFrom(stats,formula)
@@ -91,6 +95,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,model.response)
 importFrom(stats,model.weights)
 importFrom(stats,na.omit)
+importFrom(stats,nobs)
 importFrom(stats,plogis)
 importFrom(stats,pnorm)
 importFrom(stats,poisson)
@@ -108,10 +113,12 @@ importFrom(stats,rt)
 importFrom(stats,runif)
 importFrom(stats,rweibull)
 importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,var)
 importFrom(stats,vcov)
 importFrom(stats,weighted.mean)
+importFrom(stats,weights)
 importFrom(utils,packageDescription)
 importMethodsFrom(Matrix,kronecker)
