--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Dustin Tingley <dtingley@gov.harvard.edu>,
         Teppei Yamamoto <teppei@mit.edu>,
         Kentaro Hirose <hirose@princeton.edu>,
         Luke Keele <ljk20@psu.edu>,
-        Kosuke Imai <kimai@princeton.edu>
+        Kosuke Imai <imai@fas.harvard.edu>
 Maintainer: Teppei Yamamoto <teppei@mit.edu>
 Depends: R (>= 2.15.1), MASS, Matrix, mvtnorm, sandwich
 Imports: lpSolve, Hmisc, lme4 (>= 1.0), stats, graphics, grDevices, utils
@@ -15,4 +15,4 @@ Description: We implement parametric and non parametric mediation analysis. This
 LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
-URL: http://imai.princeton.edu/projects/mechanisms.html
+URL: https://imai.fas.harvard.edu/projects/mechanisms.html
