--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,update)
+importFrom(stats,update.formula)
 importFrom(stats,var)
 importFrom(stats,vcov)
 importFrom(stats,weighted.mean)
